// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stringify returns valid lottie animation 1`] = `
"{
  \\"tgs\\": 1,
  \\"v\\": \\"5.0.0\\",
  \\"fr\\": 60,
  \\"ip\\": 0,
  \\"op\\": 180,
  \\"w\\": 512,
  \\"h\\": 512,
  \\"nm\\": \\"animation\\",
  \\"ddd\\": 0,
  \\"assets\\": [],
  \\"layers\\": []
}"
`;

exports[`stringify returns valid lottie animation 2`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`stringify returns valid lottie animation with layers 1`] = `
"{
  \\"tgs\\": 1,
  \\"v\\": \\"5.0.0\\",
  \\"fr\\": 60,
  \\"ip\\": 0,
  \\"op\\": 180,
  \\"w\\": 512,
  \\"h\\": 512,
  \\"nm\\": \\"animation\\",
  \\"ddd\\": 0,
  \\"assets\\": [],
  \\"layers\\": [
    {
      \\"ind\\": 1,
      \\"ty\\": 4,
      \\"nm\\": \\"layer 1\\",
      \\"sr\\": 1,
      \\"ks\\": {
        \\"o\\": {
          \\"a\\": 0,
          \\"k\\": 100
        },
        \\"r\\": {
          \\"a\\": 0,
          \\"k\\": 0
        },
        \\"p\\": {
          \\"a\\": 0,
          \\"k\\": [
            0,
            0
          ]
        },
        \\"s\\": {
          \\"a\\": 0,
          \\"k\\": [
            100,
            100
          ]
        },
        \\"sk\\": {
          \\"a\\": 0,
          \\"k\\": 0
        },
        \\"sa\\": {
          \\"a\\": 0,
          \\"k\\": 0
        },
        \\"a\\": {
          \\"a\\": 0,
          \\"k\\": [
            0,
            0
          ]
        }
      },
      \\"ao\\": 0,
      \\"ip\\": 0,
      \\"op\\": 180,
      \\"st\\": 0,
      \\"bm\\": 0,
      \\"shapes\\": []
    },
    {
      \\"ind\\": 2,
      \\"ty\\": 1,
      \\"nm\\": \\"layer 2\\",
      \\"sr\\": 1,
      \\"ks\\": {
        \\"o\\": {
          \\"a\\": 0,
          \\"k\\": 100
        },
        \\"r\\": {
          \\"a\\": 0,
          \\"k\\": 0
        },
        \\"p\\": {
          \\"a\\": 0,
          \\"k\\": [
            0,
            0
          ]
        },
        \\"s\\": {
          \\"a\\": 0,
          \\"k\\": [
            100,
            100
          ]
        },
        \\"sk\\": {
          \\"a\\": 0,
          \\"k\\": 0
        },
        \\"sa\\": {
          \\"a\\": 0,
          \\"k\\": 0
        },
        \\"a\\": {
          \\"a\\": 0,
          \\"k\\": [
            0,
            0
          ]
        }
      },
      \\"ao\\": 0,
      \\"ip\\": 0,
      \\"op\\": 180,
      \\"st\\": 0,
      \\"bm\\": 0
    },
    {
      \\"ind\\": 3,
      \\"ty\\": 3,
      \\"nm\\": \\"layer 3\\",
      \\"sr\\": 1,
      \\"ks\\": {
        \\"o\\": {
          \\"a\\": 0,
          \\"k\\": 100
        },
        \\"r\\": {
          \\"a\\": 0,
          \\"k\\": 0
        },
        \\"p\\": {
          \\"a\\": 0,
          \\"k\\": [
            0,
            0
          ]
        },
        \\"s\\": {
          \\"a\\": 0,
          \\"k\\": [
            100,
            100
          ]
        },
        \\"sk\\": {
          \\"a\\": 0,
          \\"k\\": 0
        },
        \\"sa\\": {
          \\"a\\": 0,
          \\"k\\": 0
        },
        \\"a\\": {
          \\"a\\": 0,
          \\"k\\": [
            0,
            0
          ]
        }
      },
      \\"ao\\": 0,
      \\"ip\\": 0,
      \\"op\\": 180,
      \\"st\\": 0,
      \\"bm\\": 0
    }
  ]
}"
`;

exports[`stringify returns valid lottie animation with layers 2`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`stringify returns valid lottie animation with layers and shapes 1`] = `
"{
  \\"tgs\\": 1,
  \\"v\\": \\"5.0.0\\",
  \\"fr\\": 60,
  \\"ip\\": 0,
  \\"op\\": 180,
  \\"w\\": 512,
  \\"h\\": 512,
  \\"nm\\": \\"animation\\",
  \\"ddd\\": 0,
  \\"assets\\": [],
  \\"layers\\": [
    {
      \\"ind\\": 1,
      \\"ty\\": 4,
      \\"nm\\": \\"layer 1\\",
      \\"sr\\": 1,
      \\"ks\\": {
        \\"o\\": {
          \\"a\\": 0,
          \\"k\\": 100
        },
        \\"r\\": {
          \\"a\\": 0,
          \\"k\\": 0
        },
        \\"p\\": {
          \\"a\\": 0,
          \\"k\\": [
            0,
            0
          ]
        },
        \\"s\\": {
          \\"a\\": 0,
          \\"k\\": [
            100,
            100
          ]
        },
        \\"sk\\": {
          \\"a\\": 0,
          \\"k\\": 0
        },
        \\"sa\\": {
          \\"a\\": 0,
          \\"k\\": 0
        },
        \\"a\\": {
          \\"a\\": 0,
          \\"k\\": [
            0,
            0
          ]
        }
      },
      \\"ao\\": 0,
      \\"ip\\": 0,
      \\"op\\": 180,
      \\"st\\": 0,
      \\"bm\\": 0,
      \\"shapes\\": [
        {
          \\"ty\\": \\"gr\\",
          \\"nm\\": \\"group\\",
          \\"cix\\": 1,
          \\"it\\": [
            {
              \\"ty\\": \\"tr\\",
              \\"nm\\": \\"transform\\",
              \\"cix\\": 2,
              \\"o\\": {
                \\"a\\": 0,
                \\"k\\": 100
              },
              \\"r\\": {
                \\"a\\": 0,
                \\"k\\": 0
              },
              \\"p\\": {
                \\"a\\": 0,
                \\"k\\": [
                  0,
                  0
                ]
              },
              \\"s\\": {
                \\"a\\": 0,
                \\"k\\": [
                  100,
                  100
                ]
              },
              \\"sk\\": {
                \\"a\\": 0,
                \\"k\\": 0
              },
              \\"sa\\": {
                \\"a\\": 0,
                \\"k\\": 0
              },
              \\"a\\": {
                \\"a\\": 0,
                \\"k\\": [
                  0,
                  0
                ]
              }
            }
          ],
          \\"bm\\": 0
        }
      ]
    },
    {
      \\"ind\\": 2,
      \\"ty\\": 1,
      \\"nm\\": \\"layer 2\\",
      \\"sr\\": 1,
      \\"ks\\": {
        \\"o\\": {
          \\"a\\": 0,
          \\"k\\": 100
        },
        \\"r\\": {
          \\"a\\": 0,
          \\"k\\": 0
        },
        \\"p\\": {
          \\"a\\": 0,
          \\"k\\": [
            0,
            0
          ]
        },
        \\"s\\": {
          \\"a\\": 0,
          \\"k\\": [
            100,
            100
          ]
        },
        \\"sk\\": {
          \\"a\\": 0,
          \\"k\\": 0
        },
        \\"sa\\": {
          \\"a\\": 0,
          \\"k\\": 0
        },
        \\"a\\": {
          \\"a\\": 0,
          \\"k\\": [
            0,
            0
          ]
        }
      },
      \\"ao\\": 0,
      \\"ip\\": 0,
      \\"op\\": 180,
      \\"st\\": 0,
      \\"bm\\": 0
    },
    {
      \\"ind\\": 3,
      \\"ty\\": 3,
      \\"nm\\": \\"layer 3\\",
      \\"sr\\": 1,
      \\"ks\\": {
        \\"o\\": {
          \\"a\\": 0,
          \\"k\\": 100
        },
        \\"r\\": {
          \\"a\\": 0,
          \\"k\\": 0
        },
        \\"p\\": {
          \\"a\\": 0,
          \\"k\\": [
            0,
            0
          ]
        },
        \\"s\\": {
          \\"a\\": 0,
          \\"k\\": [
            100,
            100
          ]
        },
        \\"sk\\": {
          \\"a\\": 0,
          \\"k\\": 0
        },
        \\"sa\\": {
          \\"a\\": 0,
          \\"k\\": 0
        },
        \\"a\\": {
          \\"a\\": 0,
          \\"k\\": [
            0,
            0
          ]
        }
      },
      \\"ao\\": 0,
      \\"ip\\": 0,
      \\"op\\": 180,
      \\"st\\": 0,
      \\"bm\\": 0
    }
  ]
}"
`;

exports[`stringify returns valid lottie animation with layers and shapes 2`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;
